--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -9,6 +9,7 @@
 
 - name: initialise redash
   command: /usr/bin/docker-compose run --rm server create_db chdir={{ redash_home }}
+  ignore_errors: yes
   notify:
     - restart redash
 
