ADMIN-2415 from service to systemd

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 # handlers file for redash
 - name: restart redash
-  service: name=redash state=restarted
+  systemd: name=redash state=restarted
 
 - name: rebuild redash
   command: /usr/bin/docker-compose build chdir={{ redash_home }}
@@ -14,5 +14,6 @@
     - restart redash
 
 - name: systemctl daemon-reload
-  command: systemctl daemon-reload
+  systemd:
+    daemon_reload: yes
   notify: restart redash
